@@ -41,8 +41,8 @@ remove_symlink() {
 
 # determine the current target.
 get_target() {
-	local canonicalised=$(canonicalise "${MVN}")
-	echo $(basename "${canonicalised}")
+	local target=$(readlink "${MVN}")
+	echo ${target##*/}
 }
 
 # set the Maven symlink.
@@ -86,11 +86,12 @@ do_list() {
 		die -q "Usage error: no parameters allowed."
 	fi
 
-	local i targets
+	local i targets target
 	targets=( $(find_targets) )
+	target=$(get_target)
 
 	for (( i = 0; i < ${#targets[@]}; i++ )); do
-		[[ ${targets[i]} = $(basename "$(canonicalise "${MVN}")") ]] \
+		[[ ${targets[i]} = ${target} ]] \
 			&& targets[i]=$(highlight_marker "${targets[i]}")
 	done
 
